--- a/views/pages/jogo.html
+++ b/views/pages/jogo.html
@@ -6,11 +6,11 @@
 <h3> <div align="center" id="addPontos"></div></h3>
 
 <div id=principal></div>
-<h3><p align="center">
+<p align="center">
  <input type="button" value="Reiniciar Game" id="btReiniciar">
  <input  type="button" value="Nível Difícil" id="btVelocidade">
-</p></h3> 
-<h3><p align="center"> <input type="button" value="Convidar amigo" id="btAmigo"></p></h3>   
+</p> 
+<p align="center"> <input type="button" value="Convidar amigo" id="btAmigo"></p> 
 
 <script>
     tabuleiro="<table align=center border=1>";
@@ -73,7 +73,7 @@
     btAmigo=document.getElementById("btAmigo");
     btAmigo.addEventListener("click",convidarAmigo);
     function convidarAmigo (){
-      location.href="mailto:?subject=BORA JOGAR!!&body=https://github.com/Rute20201/snake-game-js/projects/3"
+      location.href="mailto:?subject=BORA JOGAR!!&body=https://secure-tundra-32758.herokuapp.com/"
     }
     
 
